@@ -25,10 +25,12 @@ CColors::CColors(void) :
 	, m_regModified(_T("Software\\TortoiseSVN\\Colors\\Modified"), RGB(0, 50, 160))
 	, m_regMerged(_T("Software\\TortoiseSVN\\Colors\\Merged"), RGB(0, 100, 0))
 	, m_regDeleted(_T("Software\\TortoiseSVN\\Colors\\Deleted"), RGB(100, 0, 0))
+	, m_regLastCommit(_T("Software\\TortoiseSVN\\Colors\\LastCommit"), RGB(100, 100, 100))
 	, m_regDeletedNode(_T("Software\\TortoiseSVN\\Colors\\DeletedNode"), RGB(255, 0, 0))
 	, m_regAddedNode(_T("Software\\TortoiseSVN\\Colors\\AddedNode"), RGB(0, 255, 0))
 	, m_regReplacedNode(_T("Software\\TortoiseSVN\\Colors\\ReplacedNode"), RGB(0, 255, 0))
 	, m_regRenamedNode(_T("Software\\TortoiseSVN\\Colors\\RenamedNode"), RGB(0, 0, 255))
+	, m_regLastCommitNode(_T("Software\\TortoiseSVN\\Colors\\LastCommitNode"), RGB(200, 200, 200))
 {
 }
 
@@ -60,6 +62,10 @@ COLORREF CColors::GetColor(Colors col, bool bDefault /*=true*/)
 		if (bDefault)
 			return RGB(100, 0, 100);
 		return (COLORREF)(DWORD)m_regAdded;
+	case LastCommit:
+		if (bDefault)
+			return RGB(100, 100, 100);
+		return (COLORREF)(DWORD)m_regAdded;
 	case DeletedNode:
 		if (bDefault)
 			return RGB(255, 0, 0);
@@ -76,6 +82,10 @@ COLORREF CColors::GetColor(Colors col, bool bDefault /*=true*/)
 		if (bDefault)
 			return RGB(0, 0, 255);
 		return (COLORREF)(DWORD)m_regRenamedNode;
+	case LastCommitNode:
+		if (bDefault)
+			return RGB(200, 200, 200);
+		return (COLORREF)(DWORD)m_regLastCommitNode;
 	}
 	return RGB(0,0,0);
 }
@@ -99,6 +109,8 @@ void CColors::SetColor(Colors col, COLORREF cr)
 	case Added:
 		m_regAdded = cr;
 		break;
+	case LastCommit:
+		m_regLastCommit = cr;
 	default:
 		ATLASSERT(false);
 	}
